# codestats-box

./: .env.example  CLEANUP.md  MODERNIZATION.md  README.md  codestats_box.py  mise.toml  pyproject.toml
.github/workflows/: codeql-analysis.yml  codestats.yml
src/codestats_box/: __init__.py  api.py  cli.py  config.py  exceptions.py  formatter.py  gist.py  logging_config.py  models.py  utils.py
tests/: __init__.py
